# Cross-platform-OpenAL-example

./: CMakeLists.txt  README.md
Android/Audio/app/: build.gradle
Android/Audio/app/src/androidTest/java/android/platform/audio/: ExampleInstrumentedTest.java
Android/Audio/app/src/main/: AndroidManifest.xml
Android/Audio/app/src/main/cpp/: native-lib.cpp
Android/Audio/app/src/main/java/android/platform/audio/: MainActivity.java
Android/Audio/app/src/main/res/layout/: activity_main.xml
Android/Audio/app/src/test/java/android/platform/audio/: ExampleUnitTest.java
Web/: test.html
src/: CMakeLists.txt  main.cc
